--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,44 @@
-.vscode
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+.copier-answers.yml
+.copier/
+
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+venv/
+.env
+*.egg-info/
+dist/
+build/
+*.log
+*.pid
+*.seed
+*.db
+*.sqlite3
+
 node_modules/
+dist/
+build/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vite/  # Кэш Vite (используется в этом проекте вместо Webpack)
+
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+*.swp
+*.bak
+*.tmp
+.DS_Store  # macOS
+Thumbs.db  # Windows
+
 readme2.md
-.env
