--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,12 +28,12 @@ dependencies = [
     "aiomqtt>=2.3.1",
     "asyncpg>=0.30.0",
     "pytest-asyncio>=0.23.8",
-    "pytest>=7.4.4",
+    "pytest==8.3.5",
 ]
 
 [tool.uv]
 dev-dependencies = [
-    "pytest<8.0.0,>=7.4.3",
+    "pytest==8.3.5",
     "mypy<2.0.0,>=1.8.0",
     "ruff<1.0.0,>=0.2.2",
     "pre-commit<4.0.0,>=3.6.2",
